# maof

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  release.yml
docker/: approval.Dockerfile  orchestrator.Dockerfile  worker.Dockerfile
docs/: ARCHITECTURE.md  QA.md  coordination-modes.md  deployment.md  publishing.md
examples/: __init__.py
examples/po_demo/: __init__.py  agents.py  consumers.yaml  demo.py  main.py  main_distributed.py  qa_interactive.py  qa_llm.py  register.py  scenario.py  truth.py
examples/po_demo/qa/: eval_spendcap.json  shady-broker.manifest.json
examples/po_demo/rules/: spend-cap.yaml
examples/po_demo/schemas/: delivery_metrics.v1.json  funds_commit.v1.json  order_placement.v1.json  purchase_plan.v1.json  shipment_prep.v1.json
examples/po_demo/workflows/: po-cycle.yaml
examples/quickstart/: README.md  __init__.py  agent.py  main.py
src/maof/: __init__.py  authz.py  cli.py  config.py  errors.py  identity.py  tenancy.py  types.py
src/maof/agents/: base.py  client.py  mcp_adapter.py  registry_runtime.py
src/maof/approval/: service.py  tokens.py
src/maof/context/: budget.py  builder.py  compaction.py  jit.py  notes.py  redactor.py
src/maof/context/sources/: builtins.py
src/maof/cost/: accounting.py
src/maof/eval/: judge.py  rubrics.py  runner.py
src/maof/memory/: base.py  pgvector.py  service.py
src/maof/models/: anthropic.py  azure_openai.py  base.py  bedrock.py  cohere.py  gateway.py  mistral.py  ollama.py  openai.py  vertex_gemini.py
src/maof/observability/: events.py  otel.py  trajectory.py
src/maof/observability/sinks/: postgres_sink.py  stdout_sink.py  webhook_sink.py
src/maof/orchestrator/: context_delegation.py  coordinator.py  delegation.py  l1.py  lifecycle.py  loop.py  messages.py  pipeline.py
src/maof/orchestrator/stages/: __init__.py  action_plan.py  approval.py  chat.py  intent.py  publish.py
src/maof/persistence/: base.py  postgres.py
src/maof/persistence/migrations/: 0001_init.sql
src/maof/policy/: actions.py  dsl.py  engine.py  rulesets.py
src/maof/registry/: a2a.py  admin_api.py  loader.py  models.py  search.py  signing.py  store.py
src/maof/runs/: artifacts.py  checkpoint.py  idempotency.py  ops.py  retention.py  store.py
src/maof/schemas/: registry.py
src/maof/transport/: base.py  consumers.py  factory.py  fake.py  kafka.py  rabbitmq.py  redis.py  retry.py  signing.py  sqs.py  wire.py
src/maof/workers/: pool.py
src/maof/workflows/: __init__.py  definition.py  executor.py  promote.py  store.py
tests/: conftest.py  test_a2a_real.py  test_admin_api.py  test_authz.py  test_authz_coverage.py  test_broker_fake.py  test_consumers.py  test_context.py  test_contracts.py  test_cost.py  test_durable.py  test_eval.py  test_governance.py  test_hosting.py  test_identity.py  test_identity_oidc.py  test_kafka.py  test_kafka_unit.py  test_key_providers.py  test_lifecycle.py  test_mcp_real.py  test_memory.py  test_models.py  test_observability.py  test_ops_completion.py  test_orchestration.py  test_otel_unit.py  test_persistence.py  test_pipeline_hooks.py  test_po_demo.py  test_policy.py  test_promote.py  test_quickstart.py  test_rabbitmq.py  test_rabbitmq_unit.py  test_redis.py  test_redis_unit.py  test_registry.py  test_registry_intel.py  test_registry_runtime.py  (+14 more)
tests/fixtures/: mcp_echo_server.py
