[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "maof"
version = "1.0.1"
description = "Multi-Agent Orchestration Framework — the orchestration + governance layer of a hierarchical multi-agent system, shipping zero domain content."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "John Thompson" }]
keywords = ["multi-agent", "orchestration", "governance", "llm", "agents"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]

# Core stays lean and offline-installable. Adapters live behind extras.
dependencies = [
    "pydantic>=2.5,<3",
    "pydantic-settings>=2.1,<3",
    "PyYAML>=6.0,<7",
    "jsonschema>=4.20,<5",
    "httpx>=0.27,<1",
]

[project.optional-dependencies]
rabbitmq = ["aio-pika>=9.4"]
kafka = ["aiokafka>=0.10"]
redis = ["redis>=5.0"]
sqs = ["aioboto3>=12.3"]
s3 = ["aioboto3>=12.3"]
postgres = ["asyncpg>=0.29", "pgvector>=0.2.5"]
anthropic = ["anthropic>=0.39"]
openai = ["openai>=1.30"]
azure_openai = ["openai>=1.30"]
bedrock = ["aioboto3>=12.3"]
vertex_gemini = ["google-genai>=0.3"]
mistral = ["mistralai>=1.0"]
cohere = ["cohere>=5.5"]
ollama = ["ollama>=0.3"]
mcp = ["mcp>=1.0"]
otel = ["opentelemetry-sdk>=1.27", "opentelemetry-exporter-otlp>=1.27"]
api = ["fastapi>=0.110", "uvicorn[standard]>=0.29"]
tokenizers = ["tiktoken>=0.7"]
crypto = ["cryptography>=42.0"]
oidc = ["pyjwt>=2.8", "cryptography>=42.0"]
vault = ["hvac>=2.0"]
a2a = ["a2a-sdk>=1.0"]
all = [
    "aio-pika>=9.4",
    "aiokafka>=0.10",
    "redis>=5.0",
    "aioboto3>=12.3",
    "asyncpg>=0.29",
    "pgvector>=0.2.5",
    "anthropic>=0.39",
    "openai>=1.30",
    "mistralai>=1.0",
    "cohere>=5.5",
    "google-genai>=0.3",
    "ollama>=0.3",
    "mcp>=1.0",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp>=1.27",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "tiktoken>=0.7",
    "pyjwt>=2.8",
    "cryptography>=42.0",
    "hvac>=2.0",
    "a2a-sdk>=1.0",
]
dev = [
    "mypy>=1.10",
    "ruff>=0.15",
    "black>=24.4",
    "mcp>=1.0",
    "aio-pika>=9.4",
    "fastapi>=0.110",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp>=1.27",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "types-PyYAML>=6.0",
    "types-jsonschema>=4.20",
]

[project.urls]
Homepage = "https://github.com/jthompson18/maof"
Repository = "https://github.com/jthompson18/maof"
Issues = "https://github.com/jthompson18/maof/issues"
Changelog = "https://github.com/jthompson18/maof/blob/main/CHANGELOG.md"

[project.scripts]
maof = "maof.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/maof"]

[tool.hatch.build.targets.sdist]
# The build spec and agent instructions stay in the repo, not in distributions.
exclude = ["CLAUDE.md", "docs/DESIGN.md"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "ASYNC"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
warn_unused_configs = true
files = ["src/maof"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# Optional adapter dependencies without type stubs: treat as untyped at the boundary.
[[tool.mypy.overrides]]
module = [
    "aio_pika",
    "asyncpg",
    "opentelemetry",
    "opentelemetry.*",
    "anthropic",
    "openai",
    "ollama",
    "mistralai",
    "cohere",
    "aioboto3",
    "aiokafka",
    "redis",
    "redis.*",
    "fastapi",
    "uvicorn",
    "tiktoken",
    "cryptography.*",
    "hvac",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["maof"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# The default run is the offline tier: live integration tests (marker `live`,
# gated on MAOF_TEST_* endpoints) are deselected, not skipped — run them with
# `pytest tests/local tests/test_rabbitmq.py -m live` (see tests/local/README.md).
addopts = "-q -m 'not live'"
markers = ["live: needs a real external service (MAOF_TEST_* endpoint)"]
pythonpath = ["."]
filterwarnings = [
    # Third-party, import-time: starlette is mid-migration from httpx to httpx2 and its
    # TestClient import warns (current as of starlette 1.3.0 / fastapi 0.136.3). Its
    # StarletteDeprecationWarning subclasses UserWarning (kept generic here so the filter
    # never requires starlette installed); scoped to the exact message — drop this entry
    # once starlette's TestClient moves to httpx2.
    "ignore:Using `httpx` with `starlette.testclient` is deprecated:UserWarning",
]
